@@ -4,20 +4,29 @@ Hash: SHA256
 AUX smplayer-0.8.0-quazip.patch 2915 SHA256 ac1e7f6301d14df624c13219397958d2f5ebee3c3f89f46cc9651e9413548bd2 SHA512 a642720f4db2a705ef6380212c6658a8ef34ec34319e575630750b614516f430ce91d40a47989980e695f9e0e6ada031da3ea8608e16c11112e94d5b8ccb6503 WHIRLPOOL b055fa4c97da7505a66e9b4061e0fce4609dc0f68691670cacdd9890cfa68098df11b1ae66ed153ba1c47e58f5786bee4ab4a4fdbf261eca17bcc43f9b722383
 DIST smplayer-0.8.3.tar.bz2 3201389 SHA256 835141111697c9e5b68b6dc5c96b4b38c1c0eed41f02d42ff1467e932a996435 SHA512 14d1830ce4ff3f4bf4b7f6cce1c74c84edf11dbe43fad540b9919a9b06aa148ad22c8a13498a2a61b576677c27b44482d52accf5f5c89294c4e0d7a3eba46252 WHIRLPOOL 7a1d52c0f3b5f6e7d47b1d9b8716ce9f561036697a2ed63b2d6440eeb7b010b68e0476fe8821b931e435644c73aa02428d2b84c59a8f1e7a257955a727407a6b
 DIST smplayer-0.8.4.tar.bz2 3333370 SHA256 97e2f2810a3718e5ae11d000e117c104a9b5ba7d92516f6be03c9afa5f07a2bf SHA512 d9b28154fbc6a47d5efa7313eed06ea8c683ab8a5c717a417d2dc9b0610f8da0aac56ed795296e006ef0756dd88aa5e91c14f09380e7ef2dd65d046c25803893 WHIRLPOOL 11bd9a8e36b30bde3e997c603e71cba3f20c97ae9056a677659b44d293c8ddb76e9eb50e2bccef6962e9fab37c793178d2d0198fc3b29c31a1961aef8c8b9ff8
+DIST smplayer-0.8.5.tar.bz2 3343452 SHA256 3c772738bbd4da2f5ff0e28408dab57dbf3fcdebc9d58097da45b0f2b0da6e6d SHA512 88d2941a5dc425604ef693c61d74c4bb3895df30e26a03c916bc27f57d2f8ee1af102bab69418a367171c28bda9d0a692d40744b1b3dd11340935dc51365fa2e WHIRLPOOL bf86fec5bd91a62bbd5d392983368d5a88cbcbac8da54db1031c5f1111a4b5347a5e354405997de22f9b8793b1653853dbc1ddf461948260d527bb1b5a5bcad2
 DIST smplayer-icons-0.8.4.tar.xz 505220 SHA256 bf394f6c049f5fdd678d817fc47f366745dd57d67b4efd2bfdc356923ec216d4 SHA512 81cca51e1ff20b309a8134e53183cf02fc90438d67847c36fce05984bb74045b86b84fad078dc09e10a61090ec27c661174dddd49d29c55f0546ed1e12ce4c97 WHIRLPOOL 1b502f39e488ebbe32dd79284730147be5a457e70e85d5a10d168c08d34abb5a046f75738899df402676942c4c6c41a4ea0c72a9fdf96f179baa9d99844ea81d
 EBUILD smplayer-0.8.3.ebuild 2213 SHA256 4e26578732de0c974854f4b50fcd9a622b56e998113d9636dc9af8cc22b32429 SHA512 1b0cb4fa5dd25760107b47465954c97b0a20717add98ff0429a52c05cf2115632101bc8f73d65d6f5672981b47b1b7adf60e3c3c2f0f291c581a186a4da06ae0 WHIRLPOOL 002018835bb4ef39c572007bd3b1888fde40057da6426ffe16c137803c66ccef4b83e65628e8b3a42e2ca27522d90cc792f94849d300aa237e4628d411cbc543
 EBUILD smplayer-0.8.4-r1.ebuild 2467 SHA256 59f287287c512b493456fa8e26c7559c6a00a613c5a43369f9847c055e86e1b2 SHA512 cb67ec098cbd6fdab060283950651facaabf4833f0c6bf2fb4a7b7b73c70c8c6d79b207a241b6522771e673c778f23b672eba01845d92a076a3ab60a4946326b WHIRLPOOL 0b4abe5beb744cb291e1072e45551c79a5c0de71146667c662f56eb7f4166cb739520b798d59942c8de46f28079c1b908464ed05cbedb87d6492027d0b64f7ee
-EBUILD smplayer-0.8.4.ebuild 2223 SHA256 13fca063adf83dfadf3059c8a09479485cbedaee39e09227d6563a4cc5506d45 SHA512 dad936b8504a353b1934faf84ed39d8e76397ef49e377da4ee6e2632354d408915d0567e44924df687faeb7c74808f7b5900fd5a0066d0b137c99ad92b5c29cc WHIRLPOOL a03426710a68133cf7736c37e22433e17191190eb4e963397b1ce5ebd7c66817bab3316b21fb53fa9a97f404cef6ebbff4e610fe208de9b7795be18f03efe8d7
-MISC ChangeLog 18247 SHA256 0ae153054c6f7a623d0d3ba48b1b9192a6f0c8b5e4bf6ae827fc979df118c43d SHA512 024ce2c9a9a9021f75b134a485324b03f2b36829b462fc69ac4db9eca1a329911ca08e5870c5a7969b84725993494e9200ac8684945d1a60be169d73f924ca11 WHIRLPOOL 928587a1a78b4ec8e7564a1a45b44b51bd41e6c0a300c15210d285a764ce15907d0e26d8e39597b80d4da8af42bd07736f42b6275f549376287704394ada6bff
+EBUILD smplayer-0.8.5.ebuild 2235 SHA256 9c05c6818d62986a58ea56f232924c549b7fc01fe7a05102545d4a41976d9d74 SHA512 2c4b69b0341c9eda8c1341f5eaf5f9f04cf24034755e0024e06024d9788a59d2cf9054082b9be5940e374e5c81d550c175320d0a165a3c9d443bff27c635878e WHIRLPOOL d265b816ec123c1fa9df5ae58fbf39cc8fcf6108967143bbb6f1f713421ed988cf3667d8e0a9024892b612cf20aba6236ce086b6335af15d068377f24dcfa53e
+MISC ChangeLog 18443 SHA256 c81e227a6a132dc6fc674a89a1869430ad269a277de17aa1327b7df01512759a SHA512 380626691b9e2b0ff7464f594c6fb90d2af914a5efe9e657a201c8219237ee5ed4d5d551754efa8626e45cbf709f076f44b52dfae799a44c186fd55b76058fd1 WHIRLPOOL ca97ed07ce088105306c33d17f08a26717a57b51eeefe596ee946a42bf5717e7e0067907529c4c739593c3f5d1a3d1696673dca5409e09f1a36684042b33ecc7
 MISC metadata.xml 174 SHA256 89d4f3510de4db0434e0b3794ed9bef3e603217ca0cb195d3e817c208239f6fa SHA512 bc396506ea847d6a36e400a86b8a575a46d075da58b57a4b085e12ac242e210a7a55c4e8b3da567b97c0e5a8bfc682bb5546b3b657c2f92f6fa00da674bb7062 WHIRLPOOL 0e82e9ab352222683df9da1682d9cc03d2123786218c74f31ac487417100408cd5737aac3355e96f68388ddba76b3a1ea2f4bcf50fd4ec55c87fb6bfd20a5fee
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQEcBAEBCAAGBQJRg+xGAAoJEEdUh39IaPFN4/UIAIbYBwtiyqVZ+q03NCE2YqoT
-/Eb1ZD/Gp34vCGOgvAj9y7yr402KLp4tZ1eyN20CaR26juGCQR+Xc+6l5K5uFTpG
-awR8KPHHWQaeGfjm2HE56ftmhmBndP7WhMLIh0y0XvpH7dOFxNjjGu0ZYrn8u7FN
-+hHn+rqa5UW6t+fTnNILbJ26EPS9sPHS9U+i9piiftKyGkpVNY/aQ1lK9y8Und5p
-CTV11dt5NHpmiorbKLO/AzbKUHO0Sq8uTWBCmPvOiYWtaH5nrn73snQITjP4bafE
-Xmbo8iGzb3RGX7qZCV1kp0pAxAAwa2IIA+1s2tIwBI8+POrW3r9n0//YBoreAxE=
-=pUon
+iQJ8BAEBCABmBQJRoFqiXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGODRENkQ2QkI1MzlEMURGNTkyNjYxNjUy
+QjI0NzRBRDQzQ0UyOTZFAAoJECskdK1DziluGk8P/1Xugf1AtWf8LbflA8En57Dc
+VjpC8yI/mxVdrs/WurAC13YMbCIGN5jg1eBk6I9aAv79+Eh+xSCgDzaLtWSsc9B6
+epnTpXeyqn9ey1phrphSJonhXR3YdunpNETUm96afMBs44vV0e7XQ8ililJTBqy+
+IbHMybLWbgMfGgwC6LvIFHrfNx+UXvBVoy9hUFviCv4sAFRpEueTNuHIkK2kGS1j
+vHUj6fKjjpRkiXXnuwWcoKuyqyA3XsSuVzupx0rtyvtPB3WzjilJ+Woc1JL9ACkx
+ldvW57Ds3u0Bpg+MJFDJJRXG2mQRlTC8jg96jMVJmT+Py5lYEHtPv8/W2HSlT3lg
+X2nBQWMlPyF28vJApZ4kg0vfjfUxc4YVJF8AQcbNP+P/il98cnlpRQNq2bAXN/cw
+KQTwBK8OUff7+nuTh1lKMpiYhqAAzd0PqNZC4CxHoENXwjPacD1kYRA+8chLvJRm
+E3aLOTK3Ei5zQCa+AztK7Wqs5A2/W43bv1oDgjIVzB0To+5DuFFeAn/QIoErkVto
+FJe6Q7dyViqH1EzQu7LOJrJ014lgyyyer+F4ymMoJc4cCb7eINRm0gG/ipPPChbw
+iNfn591g/c8mlaJGblSXl67v05gAUuKrVyO6E61Z/ECzS0NwDuU9nzLrb2tCPEGM
+4kKaDiFA5s6SJ0CjRcBT
+=zvsI
 -----END PGP SIGNATURE-----
