@@ -3,11 +3,11 @@ DEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 dev-libs/quazip
 DESCRIPTION=Great Qt4 GUI front-end for mplayer
 EAPI=4
 HOMEPAGE=http://smplayer.sourceforge.net/
-IUSE=debug linguas_ar_SY linguas_bg linguas_ca linguas_cs linguas_da linguas_de linguas_el_GR linguas_en_US linguas_es linguas_et linguas_eu linguas_fi linguas_fr linguas_gl linguas_he_IL linguas_hr linguas_hu linguas_it linguas_ja linguas_ka linguas_ko linguas_ku linguas_lt linguas_mk linguas_nl linguas_pl linguas_pt linguas_pt_BR linguas_ro_RO linguas_ru_RU linguas_sk linguas_sl_SI linguas_sr linguas_sv linguas_th linguas_tr linguas_uk_UA linguas_vi_VN linguas_zh_CN linguas_zh_TW
+IUSE=debug linguas_ar_SY linguas_bg linguas_ca linguas_cs linguas_da linguas_de linguas_el_GR linguas_en_US linguas_es linguas_et linguas_eu linguas_fi linguas_fr linguas_gl linguas_he_IL linguas_hr linguas_hu linguas_it linguas_ja linguas_ka linguas_ko linguas_ku linguas_lt linguas_mk linguas_ms_MY linguas_nl linguas_pl linguas_pt linguas_pt_BR linguas_ro_RO linguas_ru_RU linguas_sk linguas_sl_SI linguas_sr linguas_sv linguas_th linguas_tr linguas_uk_UA linguas_vi_VN linguas_zh_CN linguas_zh_TW
 KEYWORDS=~alpha ~amd64 ~arm ~hppa ~ppc ~ppc64 ~x86 ~x86-fbsd
-LICENSE=GPL-2
+LICENSE=GPL-2 BSD
 RDEPEND=dev-qt/qtcore:4 dev-qt/qtgui:4 dev-libs/quazip || ( media-video/mplayer2[libass,png,X] media-video/mplayer[libass,png,X] )
 SLOT=0
-SRC_URI=mirror://sourceforge/smplayer/smplayer-0.8.4.tar.bz2
+SRC_URI=mirror://sourceforge/smplayer/smplayer-0.8.5.tar.bz2
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	eutils	f31a0ec0d081047cbf9c0bbb4822d831	l10n	33bde4fb0cfd3a21a277b66bfd837e19	multilib	892e597faee02a5b94eb02ab512e7622	qt4-r2	f735f67b3de93a007dbdec708b481831	toolchain-funcs	7ffd28a8c7eea27218865352bfd3ab2f	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=6cc98b37e27e7351728b337787a5e219
+_md5_=b4d8659d492807bfb6c2f4493cddf3f8
