@@ -20,24 +20,24 @@ EBUILD lightdm-1.3.3.ebuild 3181 SHA256 a17b10a5f74266b753b40036e75f37b02ffdc1ac
 EBUILD lightdm-1.4.0-r1.ebuild 2788 SHA256 8e9f97e4f1da765face8cd1e9639c618259cb8a3934bc6a9f7542a31ae9e45ff SHA512 f98001c7936ae439342d843cb67aef6a5d95f561601d8265c2d793e523c43fd97e6f63198dad41ccd5f06e73bef83e55983f4fe69fcb1446fe4ecd90316c057f WHIRLPOOL 07b74dfd47d0983e50257d10887f9fbec8dce2cfdc00765048b06ba77e2239e5fd9976c853a7c0685b0bbc9d679afe2c39a04070aa86f3f427568e2d0e3d6314
 EBUILD lightdm-1.4.0-r2.ebuild 2843 SHA256 86c63eab9c190f8e8755e09a0d88e0d09ae9f8625358e3b1a85a55a42e11cb02 SHA512 03f50606ecd57eb58861eec6a151af3b8e362510f2b670bf4c0ca98c6dd365d75b3e7aa1e0e28ed76d8929d26d3ee656388fbee2e4c33f28718935ce5bc17c11 WHIRLPOOL bd68101bfb19042eb10a7fbac95f5e529f8d3919bc61d3ac959f389e637e4e2000c7f7cf36446d120225c97bcc31e1939bbbc1c2af1ffcf07cf2f1dc8dcf6c11
 EBUILD lightdm-1.4.0.ebuild 3183 SHA256 081555bb554c1dc330aa60f1d64af10f9c41089034c8bc2af84d293489292232 SHA512 402cfeaac8489a781b23baa1d0e28ce1f3124d4505210392da4b4e5b8c4e7caed4e67631e17c9aeae2117ddce7ecd63822367f9d35288242e4e44fa97cbcbcb6 WHIRLPOOL 5de88a52593554388cfbafc6754de00e09e44bada75a5e2b517475a58b0f36f069cd6803bdd71a32c67f3cdcc0a4f71042749291bd3a846c52aa4ce0d32cc81f
-MISC ChangeLog 10472 SHA256 bee03c5972afce4227069cf5aa041d2fb98593d2d2857fee885f04531b392358 SHA512 fc2ec7490e8ea27b1e6d20c351d7c7b60241646f821314bbb74a32541c43782c03cae4784b86bff4a3c16ca387920ff73364962e0d5d061fac86fed510c7df76 WHIRLPOOL 3ab3202d7afa200b617647573437e627b20f7f498196e14de44b82bb4ea2d1e7ce8bc36a1392aff1cabbbec41fc43ddd12557da98b53553768ae4411036876f3
-MISC metadata.xml 719 SHA256 2d0eb6a05da316a2991b871b7f5b03f427b4eb27fd851034ee96d1d7d8e27e0c SHA512 c86fc5370ae9e8d2eb680cfeb2605d110f123ac30b8b88973eb96f2731dd076e5463d65e29c6a5bf1ab890879f8167d78f504c0c4cd61d7e3d07a214cf526d68 WHIRLPOOL c86da354458f82c88d30e150f565faf78b51314964cc2201ba3a395527f1d0ea88cc4bcd83c969580ae6789616693f98e7eb35527f6200b8adf9031e6e9d3949
+MISC ChangeLog 10576 SHA256 a17187af30be5f64153319ba2ba6e7df25fdbc7d2fb1f5eb8e999f328d1b7527 SHA512 22fe9977e59bf8641397422aa890f31aac7209cd987dc29f50e8da0866161a31b17dc88ea40bd8cc4206970402df442294f30e6c2c2a82dde76867946b7ca4c0 WHIRLPOOL 435f00ce5447718b23990a5b2d4d2622d95f0d180f99d3c6124b6caf6444faa20e4854ef0dca8e71ae4c537827b0fe7a198cb547cea3eff4d2b5487c8a7d3d65
+MISC metadata.xml 631 SHA256 6665147507139d37a77ca1565017d3380c1b7b4a34264164d4f42ee3512a7197 SHA512 ad72edf9d23be0092d92f1d3896fa5abdb6fc26c69c467942ea953b6dd67d5d06a6f28ac37e26b437cbdad8fdbf80cf5f37ae991f8990f976ed3f26e97b1cc9b WHIRLPOOL 470d40128827bbc9d02c8f6717d223bffd622b54baabc3b1fa74133b3ca450038564efd78b5e184c78bde7f0018a724db101eb85f951973b163b01c438eda853
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRl3bsXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88AMEQAJYjxgtTgYkd9pKQjwyu498k
-UJm2F+BKu+CthHStL1Cy1NKcTCEFSgM84kEMN1Pc00+c6lf2qt8mqLyl0vXjulAK
-P34Ft8A9JvhkqxWnAcxT3TnrMxDCd7fI9KWFTN6ypGbwUEqyFdlrp8d/hJbsLMnU
-bsCy4akTAQizyEvSSSQ6/ggkuVnIxh3bn8t7RPqcCIcab7huFggjY1p79ZlbFdOT
-UrLxXdGcjtjYcjiQ1wEwLUT4vSBgsbt11WNltol4Clzut9LLlUtn8y8rxy6tFWjD
-6MLwqsWGOdelupUoZ8KdIc8WZflRUr6DSBEW7NWm0kPkNSBa8Gm1VqBm0IZTU/aI
-7tRBsM7FBFaIfWiUSuHymfQ+EwMvgDPQavz8BzFNzW9AMXEl2GycZ39xXdfTcyrE
-ceGJpvWnUAbBD0L3Q73sFUJuhf6As80iBKbWHPXuf67WLzDFji9vYkcrtoc6Ujyp
-ONfeFWaPu366U6fUH1Sz1V657MHLhNnBTHK9N/er7zwTJrmfkKqYA3QHdYZV5jvB
-B/qr72EY8j3q+hxZpYK6Jpvdo6Xde6tb3M8ce8S3bshOPzbKArztqYcNTG0KPOYl
-KvvA9DwCIIiaUYllcurCoTnsyZzODoxlRou/ToBxipqof8LEbfQJbdtCxYxZ9mH6
-jh398euvRexlk2g7E8qI
-=HPpA
+iQJ8BAEBCABmBQJRoE8LXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
+ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXRGODRENkQ2QkI1MzlEMURGNTkyNjYxNjUy
+QjI0NzRBRDQzQ0UyOTZFAAoJECskdK1Dzilu7zgP/RnN1oylymA7QAVYOLZtZmzd
+wYGWADQSir+oFEzYIuN3x8U2qenTEphRsV0NOvPDMNjeuFKn0DFiIdXk4BtNTmXZ
+8+RyagiqSY432Ok1JXjbXu9R+HsDqWMk9tijXeXV4zTCSyUUFhzFdKuh0eqxmxIx
+TvECu0et0LM+OF/6aAjckn7Mhw+CWczscjLIMJBzAhCWtZLIyIih3Zp65Pl1xDmp
+wS9Zr+03Pm+6leg0UloROuMIatiMCGD8nI/WnHupYt6cUwJKpuXr5sPKLArGAjLY
+B9O2JHIoHwy+G4eT7RvhWAkeqjx/vBYs7SOT7NolQKizV4SzsrEi74gpNm/NPHwE
+IyfW9VF3RqnuUOPOSPPoHDuk9wpfH0uvEy+TbLNydYGP19fYk6nwSHetYcKqdZLw
+YKY1SQ2MqbnPX7EyWdcUI75uDwvCUGzXs1UT7A1jYiK9Jt6dNljGXeaHdotnf8ut
+JnPDXb5sS1dj53GgaRgCPwMQZaZbus6dtH0RD731kn7XZ+CUolBY4scHhQEY/192
+FvXiRW84rKo0PmHTbMQYuQIqQx7fMzFq5uOG0xA57OkdaGzoFkQLqmDkzV/H12x7
+7nDzurFpAPJloDVMckgJztY+ZiCjRhvjJtfpNZKzgX9msnqk9W33swE6s/RzPMe9
+bGAoBvT0cwj4hXkEqoRQ
+=GDB9
 -----END PGP SIGNATURE-----
