@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/lightdm
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.64 2013/05/18 12:41:16 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/lightdm/ChangeLog,v 1.65 2013/05/25 05:41:25 yngwin Exp $
+
+  25 May 2013; Ben de Groot <yngwin@gentoo.org> metadata.xml:
+  Remove myself as maintainer, bug #412697
 
 *lightdm-1.4.0-r2 (18 May 2013)
 
